@startuml
'https://plantuml.com/class-diagram

title ERD Tourismus App
class Route
class Ausgangspunkt
class Endpunkt
class Verlauf

class User {
    Standort aktStandort
}

class Sehenswuerdigkeiten {
    String beschreibung
}


class Kategorie{
    int ID 
    String bezeichnung
    int typeOfPOI
}

class Hotel{
    int bettenAnzahl
}

class Restaurant {
    Speisekarte speisekarte
    int hauben 
}

class OeffentlicheVerkehrsmittel 

class Standort {
    double xKoordinate
    double yKoordinate
    Adresse adresse
    String adresszusatz
    int luftlinie(Standort ziel)
}

abstract class PointOfInterest {
    int ID
    String name
    float bewertung
    Standort standort 
    String webseite
}

class Adresse{
    int lokationsID
    int PLZ
    String ort 
    String strasse 
    String hausnr
    int stiege
    int stock 
    int tuer 
}

class Haltestelle{
    String name
    Standort standort 
}

class TeilStrecke{
    Teilstrecke davor
    Teilstrecke danach
    Haltestelle zielHaltestelle 
    int dauer
}

class FussStrecke{
    int distanz
}

class OeffiStrecke{
    Linie linie
}

class Linie{
    Fahrplan fahrplan
}

Kategorie }o--o PointOfInterest

Route *--|| Ausgangspunkt: > hat
Route *--|| Endpunkt: > hat
Route *--|| Verlauf: > hat
User --o{ Route : folgt >
User ||-- Route : ist zugeordnet <

User }o--o| OeffentlicheVerkehrsmittel: > benützt

Adresse ||--o Standort
Endpunkt --|| Standort:  > hat
Ausgangspunkt --|| Standort:  > hat

OeffentlicheVerkehrsmittel --o Route

Standort ||-- PointOfInterest: < hat
Standort ||-- Haltestelle: < hat
Verlauf }o--o{ Haltestelle

Sehenswuerdigkeiten --|> PointOfInterest
Hotel --|> PointOfInterest
Restaurant --|> PointOfInterest

TeilStrecke }|--* Verlauf
TeilStrecke  --o| Haltestelle: > endet
TeilStrecke |o-- TeilStrecke: folgt
TeilStrecke |o-- TeilStrecke: geht vor
TeilStrecke <|-- FussStrecke
TeilStrecke <|-- OeffiStrecke
OeffiStrecke --|{ Linie
@enduml
